--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@ rik=BdgmKlyYGtyqig&pid=ImgRaw&r=0">
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: url
-
-('https://github.com/IatamSources/src/blob/main/background.png?raw=true') no-repeat 
+            background: url('https://raw.githubusercontent.com/IatamSources/src/main/background.png') no-repeat 
 
 center center fixed;
             background-size: cover;
